# cpp-lang-module

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  cpp-lang-module.json  cpp-lang-module.pmodule  cpp-lang-module.pmodule.in  cpp-lang-module.wmodule  version_script.lds
.github/workflows/: cmake-multiple-platform.yml
generator/: generator.py  parser.py
include/plugify/: cpp_plugin.h
include/wizard/: cpp_plugin.h
src/: assembly.cpp  assembly.h  module.cpp  module.h
test/cross_call_master/: CMakeLists.txt  cross_call_master.pplugin  plugin.cpp  simple_tests.cpp  simple_tests.h
test/cross_call_master/pps/: cross_call_worker.h
test/cross_call_worker/: CMakeLists.txt  cross_call_worker.pplugin  plugin.cpp
test/cross_call_worker/pps/: cross_call_master.h
test/example_plugin/: CMakeLists.txt  example_plugin.pplugin  example_plugin.wplugin  plugin.cpp
test/example_plugin/plugify/: cpp_plugin.h
test/mega/: CMakeLists.txt  mega.pplugin  mega.wplugin  plugin.cpp
test/mega/plugify/: cpp_plugin.h
test/mega/pps/: example_plugin.h
test/mega/wps/: example_plugin.h
